--- a/package.json
+++ b/package.json
@@ -4,21 +4,38 @@
   "private": true,
   "scripts": {
     "test": "karma start",
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "bundle": "node_modules/.bin/webpack"
+  },
+  
+    "jest": {
+      "verbose": true,
+      "coveragePathIgnorePatterns": [
+        "/node_modules/",
+        "ElfDebugEnzyme.js",
+        "tiny-pub-sub.js",
+        "temp-poly-fills.js"
+      ],
+      "setupFiles": [
+        "./source/setup-jest.js"
+      ]
+    },
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "bower": "^1.8.2",
     "cookie-parser": "~1.4.3",
     "debug": "^3.1.0",
     "express": "^4.16.1",
     "express-session": "^1.15.6",
-    "jade": "~1.11.0",
+    "jquery": "^3.2.1",
     "marked": "~0.3.6",
     "mongoose": "^4.12.0",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "pug": "^2.0.0-rc.4",
     "serve-favicon": "^2.4.5",
     "sharp": "^0.18.4"
   },
