--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "isit-web-crafts",
+  "name": "isit-web-crafts-means",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "test": "karma start",
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "bundle": "node_modules/.bin/webpack"
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
@@ -13,16 +14,26 @@
     "debug": "^3.1.0",
     "express": "^4.16.1",
     "express-session": "^1.15.6",
+    "isit-code-means": "^1.0.0",
+    "isit-site-tools-means": "^1.0.0",
     "jade": "~1.11.0",
     "marked": "~0.3.6",
+    "material-ui": "^0.19.4",
     "mongoose": "^4.12.0",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "serve-favicon": "^2.4.5",
-    "sharp": "^0.18.4"
+    "sharp": "^0.18.4",
+    "webpack": "^3.9.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "grunt": "~1.0.1",
     "grunt-contrib-clean": "~1.1.0",
     "grunt-contrib-jade": "~1.0.0",
@@ -37,6 +48,7 @@
     "karma": "~1.7.1",
     "karma-jasmine": "~1.1.0",
     "karma-phantomjs-launcher": "~1.0.4",
-    "karma-spec-reporter": "0.0.31"
+    "karma-spec-reporter": "0.0.31",
+    "webpack-dev-server": "^2.9.5"
   }
 }
