--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "test": "karma start",
+    "test": "jest",
+    "karma-test": "karma start",
     "start": "nodemon ./bin/www",
     "bundle": "node_modules/.bin/webpack"
   },
@@ -12,14 +13,14 @@
     "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "^3.1.0",
-    "express": "^4.16.1",
+    "express": "^4.16.2",
     "express-session": "^1.15.6",
     "isit-code-means": "^1.0.0",
     "isit-site-tools-means": "^1.0.0",
     "jade": "~1.11.0",
     "marked": "~0.3.6",
     "material-ui": "^0.19.4",
-    "mongoose": "^4.12.0",
+    "mongoose": "^4.13.5",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -31,9 +32,14 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
     "grunt": "~1.0.1",
     "grunt-contrib-clean": "~1.1.0",
     "grunt-contrib-jade": "~1.0.0",
@@ -44,11 +50,13 @@
     "grunt-karma": "~2.0.0",
     "jasmine-core": "~2.8.0",
     "jasmine-jquery": "~2.1.1",
+    "jest": "^21.2.1",
     "jshint-stylish": "~2.2.1",
     "karma": "~1.7.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-jasmine": "~1.1.1",
     "karma-phantomjs-launcher": "~1.0.4",
     "karma-spec-reporter": "0.0.31",
+    "react-test-renderer": "^16.2.0",
     "webpack-dev-server": "^2.9.5"
   }
 }
