--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ foo.txt
 foo
 foo.js
 foo.json
+bundle.js
+bundle.js.map
 
 # IDE Files
 .idea
@@ -74,4 +76,5 @@ typings/
 
 # dotenv environment variables file
 .env
+
 
