--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-dom": "^16.2.0",
     "serve-favicon": "^2.4.5",
     "sharp": "^0.18.4",
-    "webpack": "^3.9.1"
+    "webpack": "^3.9.1",
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
